# module306-2

./: .env.example  .gitignore  ADMIN_API.md  Cargo.toml  Dioxus.toml  PARKING_API.md  README.md  TESTING.md  clean-zip.sh  dev.db  foxtown.db  package-lock.json  package.json  tailwind.css
.github/: SETUP_CHECKLIST.md
assets/: loading.css  tailwind.css
assets/figma-export/: foxtown-interactive-map.html  foxtown-store-directory.html
assets/figma-export/fig/: foxtown-balanced-login-page.html  foxtown-circular-spin-to-win.html  styles.css
assets/figma-export/header/: header-top-navigation-shell.html  styles.css
assets/i18n/: de.json  en.json  fr.json  it.json
data/: parkings.json  stores.json  vouchers.json
documentation/: ADMIN_API.md  MODIF.md  PARKING_API.md  centre_commercial_presentation.pptx  spy_de_web_i306-2.gan
migrations/: 0001_init.sql  0002_vouchers_stores_parkings.sql
migrations/seeders/: parkings.json  stores.json  visits.json  vouchers.json
prisma/: dev.db  schema.prisma  seed-mall.ts  seed.ts
prisma/migrations/20260115095111_init/: migration.sql
public/: tailwind.css
scripts/: generate_2d_building_preview.py
src/: cookies.rs  db.rs  main.rs  stores.rs
src/admin/: mod.rs
src/app/: actions.ts  layout.tsx  mall-actions.ts  page.tsx
src/app/(carts)/cart/: action.ts
src/app/(carts)/wishlist/: action.ts
src/app/(user)/orders/: action.ts  page.tsx
src/app/[category]/[id]/: page.tsx
src/app/admin/: page.tsx
src/app/admin/parking/: page.tsx
src/app/admin/shops/: page.tsx
src/app/admin/stats/: page.tsx
src/app/api/admin/parking/: route.ts
src/app/api/auth/signup/: route.ts
src/app/mes-bons/: page.tsx
src/app/parking/: page.tsx
src/app/plan/: page.tsx
src/auth/: mod.rs
src/components/: admin_content.rs  button.rs  cart.rs  checkout.rs  contact.rs  cookie_banner.rs  directory.rs  error.rs  footer.rs  game.rs  game_rules.rs  home.rs  interactive_map.rs  landing.rs  login.rs  map_editor.rs  nav.rs  not_found.rs  parking.rs  parking_admin.rs  privacy.rs  product_page.rs  rewards.rs  rewards_draw.rs  store_page.rs  stores_admin.rs  terms.rs  visits_stats.rs  voucher_list.rs
src/components/cart/: WishlistButton.tsx
src/components/common/: LinksDesktop.tsx  Navbar.tsx
src/components/game/: WheelOfFortune.tsx
src/components/layout/navbar/: LinksDesktop.tsx
src/components/parking/: ParkingStatus.tsx
src/components/products/: Images.tsx
src/components/shops/: ShopCard.tsx  ShopList.tsx
src/context/: auth.rs  cart.rs
src/i18n/: mod.rs
src/libs/: auth.ts  db.ts  mongodb.ts
src/services/: game.rs  mod.rs  parking.rs  visits.rs  vouchers.rs
src/types/: types.ts
