[package]
name = "ecommerce-site"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"

[features]
web = ["dioxus/web"]
server = ["dioxus/server"]

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1
