[package]
name = "ecommerce-site"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9"
tokio = { version = "1", features = ["sync"] }
dotenvy = "0.15"

[features]
web = ["dioxus/web"]
server = ["dioxus/server"]

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1
